# webwoven

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.production.yml  docker-compose.yml  justfile  mkdocs.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  stylelint.config.mjs
services/api/: pyproject.toml
services/api/src/webwoven_api/: __init__.py  cli.py  container.py  main.py  settings.py
services/api/tests/: conftest.py  test_settings.py
services/api/tests/domain/: test_daily_leaderboard.py  test_frontier.py  test_hint_candidates.py  test_memory_reader.py  test_navigation_and_hints.py  test_navigation_choices.py  test_room_state_machine.py  test_round_eligibility.py  test_round_selection.py  test_scoring.py
services/api/tests/graph/: test_bundle.py  test_sqlite_reader.py
services/api/tests/http/: test_media.py  test_presenters.py  test_rate_limits.py  test_rooms.py  test_security_and_health.py  test_sessions.py
services/api/tests/persistence/: test_postgres_mapping.py  test_serialization.py  test_valkey_rooms.py
services/pipeline/: pyproject.toml
services/pipeline/src/webwoven_pipeline/: __init__.py  acquisition.py  cli.py  cli_serialization.py  codex_artifacts.py  commons.py  commons_asset_reuse.py  commons_assets.py  commons_discovery.py  commons_downloads.py  compiler.py  (+36 more)
services/pipeline/tests/: conftest.py  test_acquisition.py  test_cli.py  test_cli_serialization.py  test_commons.py  test_commons_asset_reuse.py  test_commons_assets.py  test_commons_discovery.py  test_commons_merge.py  test_content_artifacts.py  test_http_transport.py  test_media_context.py  test_media_discovery.py  test_media_discovery_hints.py  test_normalization.py  test_registry_and_seeds.py  test_relation_quality.py  test_relation_sentences.py  test_reviewed_media.py  test_round_validation.py  test_rounds_and_fixture.py  test_semantic_refresh.py  test_statement_policy.py  test_wikidata.py  test_wikipedia_articles.py  test_wikipedia_media.py
(+420 files in other folders)
