[project]
name = "webwoven-pipeline"
version = "0.1.0"
description = "Deterministic offline knowledge-graph pipeline for Webwoven"
requires-python = ">=3.13,<3.14"
dependencies = ["jsonschema[format-nongpl]>=4.25,<5"]

[project.scripts]
webwoven-pipeline = "webwoven_pipeline.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webwoven_pipeline"]
